[tool.poetry]
name = "aula08"
version = "0.1.0"
description = ""
authors = ["Felipe-Nogueira2909 <felipesousanogueira@alu.ufc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
